# oro

./: .docker-config.json  .dockerignore  .env.example  .gitignore  README.md  build_index.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  quick-agent.py  requirements.txt
.github/workflows/: integration-tests.yml  promote-images.yml  publish-images.yml  unit-tests.yml
data/suites/: problem_suite_v1.json  problem_suite_v2.json  problem_suite_v3.json
docker/: README.md
docker/prometheus/: prometheus.yml
docker/proxy/: Dockerfile  allowed_models.json  nginx.conf.template  validate_model.js
docker/search-server/: Dockerfile  entrypoint.sh  requirements.txt
docker/validator/: Dockerfile  pyproject.toml  requirements-base.txt  requirements.txt
docs/: miner-guide.md  validator-guide.md
scripts/: bench_agent.py  bench_concurrency.py  eval_local.py  publish-search-server-base.sh  run_full_evaluation.sh  score_full_evaluation.py  select_launch_problems.py
src/agent/: agent.py  agent_interface.py  problem_scorer.py  proxy_client.py  reasoning_scorer.py  run_sandbox.py  sandbox_config.py  sandbox_executor.py  sandbox_status.py  scoring.py  test_problem_scorer.py  types.py
subnet/: README-setup-local-chain-subnet.md  sandbox.py  test_runner.py
subnet/tests/: test_metrics.py  test_proxy_client.py  test_reasoning_scorer.py  test_sandbox.py  test_sandbox_executor.py  test_scoring.py  (+1 more)
tests/: __init__.py  test_output_split.py  test_problem_scorer.py  test_sandbox_envelope.py  test_scoring_perf.py  test_upload_logs.py
(+46 files in other folders)
